feat: button 적용 in QuestionDetailView

--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -12,6 +12,12 @@
           integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+        .button span {
+            color: #35495e;
+            font-family: "Jua", sans-serif;
+        }
+    </style>
 </head>
 <body>
 <noscript>
