--- a/src/frontend/public/index.html
+++ b/src/frontend/public/index.html
@@ -14,6 +14,7 @@
         .button span {
             color: #35495e;
             font-family: "Jua", sans-serif;
+            font-size: 16px;
         }
     </style>
 </head>
